--- a/_posts/2021-5-12-行测(判断推理).md
+++ b/_posts/2021-5-12-行测(判断推理).md
@@ -13,19 +13,15 @@ title: 行测/判断推理40题
 2，最小图形形状
 3，对称轴穿过线or点
 4，考虑边的数目，或者内部边的数目
+5，图形拆分视图也可以用数个数的方法
+6，图形分类：面积最大部分与图形形状相似
 ```
-
-
 
 ### 判断推理
 
 #### 1，图形推理
 
-中心对称图形：一个图形绕某一点旋转180度，旋转后的图形能和原来的图形完全重合
-
-轴对称+中心对称：有两条相互垂直的对称轴
-
-错题
+##### 错题
 
 ```
 1，边与轴重合
@@ -34,17 +30,115 @@ title: 行测/判断推理40题
 4，标记点的位置
 ```
 
-**数量规律**
+##### 总体规则
 
-一笔画
+> 图形构成相通，考察位置规律
+>
+> 图形构成相似，考察样式规律
+>
+> 图形构成不同，考察属性、数量以及其他特殊规律 
 
+##### 1，位置规律（元素组成完全相同）
+
+平移、旋转（方向角度）、翻转（时针法）
+
+若有图1,2,3 考虑完12关系，则32有特定规律。
+
+##### 2，样式规律（元素组成相似）
+
+相加、相减、求同、求异
+
+有可能是1,3操作得到2
+
+缺啥补啥
+
+黑白叠加
+
+##### 3，属性规律（元素组成不同）
+
+**对称性**
+
+>中心对称图形：一个图形绕某一点旋转180度，旋转后的图形能和原来的图形完全重合（正着看倒着看一样）
+>
+>轴对称+中心对称：有两条相互垂直的对称轴
+>
+>对称轴：条数，方向
+
+**曲直性**
+
+> 曲、直、曲+直
+
+**开闭性**
+
+> 开放、封闭
+>
+> 即使是既包含封闭又包含开放，也不是考这个点，可能是一笔画
+
+##### 4，数量规律（元素组成不同，点线面素角）
+
+**点**
+
+> 先考虑交点，再考虑直线与曲线的交点（即考虑点是如何形成的），若有特定图形如圆，可以查看圆内外部的交点
+>
+> 曲直交点，曲直+内外
+>
+> 点加粗观察：点在线上，交点等。
+
+**线**
+
+> 1，数直线、曲线
+>
+> 2，直线数+曲线数
+>
+> 3，图形内外（上下，左右等明显的两部分），线数目规律
+
+笔画数
+
+> 图形特征：五角星、月亮、日、田以及日、田的变形，或者含有很多端点
+>
+> 一笔画
+>
 > 1，线条连通
 >
 > 2，奇点为0或2 端点也是奇点
 
-多笔画
-
+> 多笔画
+>
 > 笔画数=奇点数/2 （任何图形奇点数为偶）
+
+**面**
+
+> 封闭区域多优先数面
+>
+> 最大最小面的形状、属性
+
+**素**
+
+> 元素
+>
+> 数元素的个数
+>
+> **个数、种类数、部分数**
+>
+> 例子：“回”字部分数为2
+>
+> 注：生活化的图形往往先考虑部分数
+>
+> 注2：可能会考相邻两幅图的共同元素
+>
+> 注3：个数和种类数相同时，可考虑相同元素的位置关系
+>
+> 注4：以上都不成规律时，进行元素换算，即“1个顶几个”
+
+**角**
+
+> 交叉算四个角
+>
+> 锐角的补交不算角
+>
+> 若角个数不成比例，看锐角
+>
+> 封闭图形，除了数内部角，外部角，还可以内+外角个数
 
 空间重构
 
@@ -72,39 +166,173 @@ title: 行测/判断推理40题
 >
 > 3，然后对比选项进行排除
 
+##### 4，特殊规律
+
+**功能元素**（出现点、箭头、或者小元素）
+
+> 标记最长边，最短边，锐角，相交部分，非相交部分，点在线上还是交点上
+
+**图形间关系**（两个元素或几个封闭空间连在一起）
+
+> 相离、相压、相交（相交于面、点、长边短边）
+>
+> 可以看相交的位置
+>
+> 相交边 一行或一列的数量关系
+>
+> 相交面部分与非相交部分面积大小比较
+
+##### 5，空间重构
+
+> 相对面：同一行列相隔一面，Z字形两端且紧靠竖线，Z字要规则
+>
+> 公共边：展开面上成直角
+>
+> 画边法：顺时针选择一面画边
+
+##### 6，立体拼图、截面图、三视图
+
+> 凹凸一致
+>
+> 三视图注意从任意角度看包括仰视图
+
 #### 2，类比关系
 
-语义关系：褒义，贬义，中性   一般都感情色彩明显
+##### 语义关系
+
+（判断题干词语间逻辑关系：褒贬一致，正反义关系一致）
+
+褒义，贬义，中性   一般都感情色彩明显
+
+近义，反义，比喻义
+
+##### 逻辑关系
+
+全同（一个物体的不同说法）
+
+包含（组成、种属，种属还分具体的特指、泛指）
+
+并列（矛盾非此即彼、反对指多种情况）
+
+交叉（例如男人和老师）
+
+对应（属性有必然属性、或然属性，因果有必然因果和或然因果。例如教师和教室）
+
+##### 语法关系
+
+主谓、动宾、主宾关系
+
+注意各个词语的主体是否一致
+
+##### 积累
+
+```
+八卦：乾、兑、离、震、巽、坎、艮、坤 乾坤属于其二
+九族：高祖、曾祖、祖父、父亲、已审、子、孙、曾孙、玄孙
+五音：宫、商、角、徵zhi、羽
+五行：土、金、木、火、水
+七情：喜、怒、忧、思、悲、恐、惊
+```
+
+##### 二级辨析
+
+```
+当一级的以上关系区分不了时，需要进一步分析，具体从以下几个方面入手：
+1，感情色彩 2，词语结构 3，词性 4，主次关系 5，范畴 6，主要功能与次要功能
+7，必然与或然 8，同一领域
+```
 
 #### 3，定义判断
 
-识别有效信息
+##### 识别有效信息
 
 > 主体、客体
 >
 > 留意概念句子的句号位置
 
+##### 做题思路
+
+> 看清提问：正反提问，选不属于的要圈出问题
+>
+> 抓准信息：重点勾画
+>
+> 选项比较：对比择优
+
 #### 4，逻辑判断
 
-**翻译推理**
+##### **翻译推理**
+
+思路：先翻译，后推理
 
 > 规则1：前推后
 >
-> 如果/就/都/一定
+> 如果...就/都/一定/那么
+>
+> 只要...就
+>
+> 所有...都...
+>
+> ...是...的充分条件（充分条件在前）
+>
+> 
 >
 > 规则2：后推前
 >
-> 只有才，不...不...
+> 只有...才
 >
-> B推A：除非A否则不B
+> ...才
 >
-> -B推A：除非A否则B
+> **不...不...**
+>
+> ...是...的必要条件/前提（必要条件在后）
+>
+> **B推A**：除非/必须/如果不A否则不B
+>
+> **-B推A**：除非A否则B
 >
 > 谁必不可少，谁在箭头后
+>
+> 如：善治的前提是良法：良法不可少，则是前推后
+>
+> 如：推进依法治国进程中，大力宣传法制**必不可少**：依法治国->宣传法制
+>
+> 
+>
+> 且：“和”，“而且”，逗号、顿号等
+>
+> 或：或者我喜欢静静，或者我喜欢明明 —> 喜欢静静并（或）喜欢明明=1  至少喜欢一个
+>
+> 或者描述的对象，至少一个成立。
+>
+> 德摩根定律：且、或整体的非
+>
+> 
+>
+> “有的”可能包括所有，翻译时带上有的，逆否时有的依然放前面不动
+>
+> 规则：（文字游戏，绕而已）
+>
+> 有的1是2=有的2是1
+>
+> 有的1不是2=有的不是2的是1
+>
+> 所有1是2—>有的2是1
+>
+> 
+>
+> “并非”=否定
+>
+> 并非出现，后面全部否：必然换可能，有的换所有，且或互换，最后谓语动词否定
+>
+> 注意：必然=一定；未必=不必然
+>
+> 例子：他人的快乐，未必是自己的快乐
+>
+> 翻译：他人的快乐，不必然是自己的快乐=他人的快乐，可能不是自己的快乐
 
-**组合排列**
+##### **组合排列**
 
-> 题干明确用排除，题干不确定用代入
+> 排除代入法：题干明确用排除，题干不确定（真假未知）用代入
 >
 > 最大信息法：出现次数最多
 >
@@ -112,9 +340,9 @@ title: 行测/判断推理40题
 >
 > 321结构：先看3，再看1，最后看2
 
-**逻辑论证**
+##### **逻辑论证**
 
-论证论点与论据之间的关系
+**论证论点与论据之间的关系**
 
 注意：转折词、限定词
 
@@ -148,6 +376,25 @@ title: 行测/判断推理40题
 >
 > 走投无路的时候，否哪是哪，找否定答案
 
+例子：
+
+> 论点：有1就有2
+>
+> 削弱方式1：否论点，有1同时没有2
+>
+> 削弱方式2：拆桥，没有1同时有2
+>
+> 方式1比方式2削弱力度强
+
+正确答案特点
+
+```
+1，谁直接明确，优选谁
+2，建议类慎选
+3，必然强于可能
+4，论点是比较的形式，加强或削弱的答案也是比较的形式
+```
+
 一般错误选项类型
 
 > 1，跑题
@@ -157,6 +404,8 @@ title: 行测/判断推理40题
 > 3，对策类
 >
 > 4，副作用
+>
+> 5，具有敏感词：绝对化的词（一定、肯定、必须等），比较性的词（更、越来越、比）、程度性的词（主要等）
 
 加强论据
 
@@ -164,10 +413,65 @@ title: 行测/判断推理40题
 >
 >解释>例子
 >
->类比不选
+>类比不选， 类比只是可能性的联系
 
 搭桥
 
-> 必要条件（没它不行）
+> 必要条件（没它不行，使论点论据可以被利用）
 >
 > 搭桥/必要条件>解释原因>举例子
+>
+> 如果两个选项都是搭桥，但顺序不同
+>
+> 论据：1—>2  论点：1—>3 搭桥：2—>3
+>
+> 论据：1—>2  论点：3—>2 搭桥：3—>1
+>
+> (总体思路是，使得论点中的联系成立)
+
+真假推理
+
+> 矛盾关系（一真一假）
+>
+> **A—>B 的否定是 A且-B**
+>
+> 即
+>
+> **A—>B 等价于-A或B**
+>
+> 例如：如果晴天，那么去郊游 
+>
+> 否定：晴天，但没去郊游
+>
+> 反对关系（必有一真）
+>
+> 有的存在  
+>
+> 反对：有的不存在
+>
+> 多个条件推导：
+>
+> 一真前假，一假后真
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
