--- a/_posts/2021-5-12-行测(常识判断) .md
+++ b/_posts/2021-5-12-行测(常识判断) .md
@@ -133,3 +133,102 @@ title: 行测/常识判断20题
 ##### **口诀记忆4：**
 
 `十二三中经体革。十三大上三步走，理论路线全都有。十四大上建市场，小平理论指导强。十五大上举大旗，三中全会农问题。十六大上江三表，全面建设小康了。十七科学发展观，理论体系特色路。十八百年目标下，全面小康现代化。十九进入新时代，国内矛盾变化快。`
+
+### 三，地理
+
+#### 海洋
+
+**世界最大的咸水湖**，里海，亚欧大陆交界处
+
+咸海，哈萨克斯坦边境
+
+**世界陆地的最低处**，死海
+
+**欧洲最长的河流，世界最长的内流河**，伏尔加河
+
+### 四，国家发展
+
+#### 政治
+
+新历史方位：中国特色社会主义进入新时代
+
+中特思想总任务：实现社会主义现代化和中华民族伟大复兴
+
+习思的核心要义：坚持和发展中国特色社会主义
+
+新时代社会主要矛盾的发展思想：以人民为中心
+
+解决我国一切问题的基础和关键：发展
+
+我们党始终不渝的奋斗目标：带领人民创造美好生活
+
+中特主义的最大优势：中国共产党领导
+
+根本政治制度：人民代表大会制度
+
+维护国家主权和安全的战略基石：核力量
+
+#### 社会
+
+中国特色社会主义的本质要求和重要保障：全面依法治国
+
+
+
+#### 文化
+
+一个国家、一个民族发展中更基本、更深沉、更持久的力量：文化自信
+
+#### 生态文明
+
+中华民族永续发展的千年大计：建设生态文明
+
+### 五，历史
+
+##### 诗词
+
+信使：青鸟
+
+隐居生活：采薇
+
+杰出人才：昆山玉
+
+##### 文学
+
+《周易》
+
+> 两仪
+
+《大学》
+
+> 大学之道，在明明德，在亲民，在止于至善
+>
+> 
+
+《庄子》-道家
+
+> “齐物”
+>
+> “五行”
+
+《论语》-儒家
+
+> “正名”
+>
+> “中庸”
+>
+> “三纲”
+
+墨家
+
+> “兼爱”
+
+孟子
+
+> 良知
+
+佛教
+
+> “四谛”
+>
+> “涅槃”
+
