--- a/_posts/2021-5-13-行测个人考试数据.md
+++ b/_posts/2021-5-13-行测个人考试数据.md
@@ -20,3 +20,13 @@ suggest：
 2，言语错误的选项也存在无原因排除正确选项，不要完全凭直觉，答案更多是出现在题目线索中。
 ```
 
+### 国考2021年（65.2分-地市级）
+
+```
+date：2021.10.21
+status：数量没做。
+1，看清题目，确认是问题时问的肯定还是否定！有疑问的时候，回头看看题目！
+
+```
+
+### 国考2020年（73.6分-地市级）
