--- a/_posts/2092-5-19-新闻记录随笔.md
+++ b/_posts/2092-5-19-新闻记录随笔.md
@@ -58,7 +58,21 @@ author: Rody
 
 叕：表示短或不足
 
-#### 2，成语
+
+
+#### 2，俗语
+
+**燕归巢**：燕子回到巢穴，比喻对家乡的思念与眷恋
+
+**破天荒**：盘古开天辟地第一斧，形容从来没有出现过的事。闻所未闻强调没听过，而不一定没出现、没发生
+
+**睁眼瞎**：比喻不识字、没文化、缺乏知识的人=目不识丁
+
+**鸿雁=书信=笺札jiān zhá**
+
+
+
+#### 3，成语
 
 **泽被后世**，zé pī hòu shì，意思是恩惠遍及到后代的人民。 出自《崇高的理想》
 
@@ -93,6 +107,44 @@ author: Rody
 **左支右绌**：chu 顾了左边，顾不了右边。形容力量不足，穷于应付
 
 **循循善诱**：善于有步骤的引导、启发
+
+**相形见绌**：跟另一方相比，显得远远不足
+
+**不屈不挠**：压力和困难面前不屈服，表现十分顽强，但没有体现多次经历挫折（与百折不挠区分）
+
+**无独有偶**：表示两事或两人十分相似
+
+**工力悉敌**：双方用的功夫和力量相当，比喻两个优秀的艺术作品不分上下
+
+**望洋兴叹**：在伟大事物面前感叹自己的渺小，做事力量不足而无可奈何。
+
+**积重难返**：指经过长时间形成的思想作风或习惯很难改变，多指恶习、弊端发展到难以革除的地步
+
+**目无全牛**：形容技艺极其精湛纯熟
+
+**师心自用、固执己见、刚愎自用**：都是固执，自以为是
+
+**不孚众望**：不能使众人信服，与不负众望相反
+
+**穷奢极欲**：极端奢侈，极度享受
+
+**身无长物**：除自身外在没有多余的东西，形容贫穷
+
+**顽瘴痼疾**：zhàng gù jí 指经久难治愈的病
+
+**如椽巨笔**：chuán 像椽子一般粗大巨大的笔。比喻记录大事的手笔，也比喻笔力雄健的文词。
+
+**按图索骥**：按照图像寻找好马。原比喻办事拘泥成法，不知灵活变通。现多比喻按线索寻找 类似于**刻舟求剑**
+
+**因势利导**：顺应事物的发展趋势，向有利的方向引导
+
+**明察秋毫**：为人十分精明，任何细小的东西也能看得很清楚
+
+**亦庄亦谐**：既严肃庄重又诙谐有趣。
+
+**河清海晏**：黄河水清，大海平静。比喻天下太平
+
+
 
 ### 三，文言文积累背诵
 
@@ -264,7 +316,13 @@ author: Rody
 
 新发展理念：创新、协调、绿色、开放、共享的发展理念
 
+```
+创新成为第一动力，协调成为内生特点，绿色成为普遍形态，开放成为必由之路，共享成为根本目标
+```
+
 新发展格局：国内大循环为主体，国内国际双循环相互促进
+
+
 
 ### 十二、创新
 
