--- a/_posts/2092-5-20-单词速记.md
+++ b/_posts/2092-5-20-单词速记.md
@@ -726,6 +726,8 @@ the vietnam war began as a regional conflict  and became one of history's worst 
 
 catastrophes 大灾难，惨败
 
+catastrophe
+
 humanitarian 慈善家，人道主义的
 
 humanity 人道，人，人性       /hjuˌmænɪˈtɛriən/
@@ -931,6 +933,8 @@ prosperity 繁荣
 reap the benefit 收获好处
 
 reap 获得，收割
+
+rape 抢掠，强奸
 
 squid 鱿鱼
 
@@ -1364,7 +1368,77 @@ sales 出售，销售额
 
 exceed 超过，越过
 
+#### 2021-8-19
 
+compete 竞争
+
+adversary 对手、敌手
+
+outsmart 比...聪明，赢过
+
+sometimes a man can meet his destiny on the road he took to avoid it 
+
+instilling 灌输，浇灌
+
+depopulate 是人口大量减少
+
+viral 病毒的，由病毒引起的，热播，流行
+
+filmmaker 电影制作人
+
+film 电影、拍摄
+
+woman /woomen/
+
+women /wimin/
+
+man
+
+men
+
+salmon 三文鱼
+
+roast 烤肉，讥讽，开...玩笑
+
+scrutiny 仔细检查，审视
+
+facilitator 协调员
+
+facilitate 协助，帮助
+
+sanity 健全精神，明智
+
+#### 2021-8-25
+
+imminent 即将发生的，逼近的
+
+cheap oil 便宜的石油
+
+to many 对于很多人来说
+
+throne 王位，王座，军权
+
+game of thrones 权利的游戏
+
+besides 此外，而且，除了
+
+aggravate 使恶化，激怒
+
+dust 灰尘
+
+troops 军队
+
+petition 请愿书，向...请愿
+
+petitioners 请愿者
+
+when in doubt 不确定时
+
+remain silent 保持沉默
+
+various methods 不同的方法
+
+accomplish this  完成
 
 
 
