--- a/_posts/2021-5-13-行测(言语理解).md
+++ b/_posts/2021-5-13-行测(言语理解).md
@@ -10,6 +10,7 @@ title: 行测/言语理解40题
 
 ```
 1，言语错误的选项也存在无原因排除正确选项，不要完全凭直觉，答案更多是出现在题目线索中。
+2，选项必须包含主要的主题词，思考选项是否是无中生有。
 ```
 
 ## 言语理解
@@ -20,6 +21,7 @@ title: 行测/言语理解40题
 2，一定要看清所有选项再确定答案
 3，答案一般都会有主题词或者主题词的形象表述
 4，选词填空的不认识的词要从字面理解，不要随意排除一个无根据的错误项
+5,选句子填空一定要看周围句子，与选填的句子答案是否一致
 ```
 
 
