--- a/_posts/2021-5-13-行测(言语理解).md
+++ b/_posts/2021-5-13-行测(言语理解).md
@@ -22,6 +22,7 @@ title: 行测/言语理解40题
 3，答案一般都会有主题词或者主题词的形象表述
 4，选词填空的不认识的词要从字面理解，不要随意排除一个无根据的错误项
 5,选句子填空一定要看周围句子，与选填的句子答案是否一致
+6，如果选项都包含部分主题词，要考虑问题的内容是否符合文段逻辑，如：过于绝对等。
 ```
 
 
