--- a/_posts/2021-5-13-行测(资料分析).md
+++ b/_posts/2021-5-13-行测(资料分析).md
@@ -81,6 +81,8 @@ r=增长量/基期量
 
 **间隔增长率**:   r =r1+r2+r1*r2  （若r1，r2均小于10%，相乘可以忽略，不能忘记正负号）
 
+**间隔年相比**(**同上**)：2013年产值A，2015年产值B，2014年同比增长a，2015年同比增长b，因此2015年相比于2013年的结果为(1+a)(1+b)-1
+
 **间隔基期**：基期量=现期量/1+r间隔
 
 **年均增长率**：（1+r）的n次方=现期量/基期量（n为年份差）
@@ -105,8 +107,6 @@ r=增长量/基期量
 **增长率不变**：现期量=基期量*（1+r）的n次方
 
 **增长量不变**：现期量=基期量+增长量*n
-
-
 
 ### 四，比重
 
