--- a/_posts/2092-5-19-新闻记录随笔.md
+++ b/_posts/2092-5-19-新闻记录随笔.md
@@ -134,25 +134,30 @@ author: Rody
 
 **如椽巨笔**：chuán 像椽子一般粗大巨大的笔。比喻记录大事的手笔，也比喻笔力雄健的文词。
 
-<<<<<<< HEAD
-**按图索骥**：按照图像寻找好马。原比喻办事拘泥成法，不知灵活变通。现多比喻按线索寻找 类似于**刻舟求剑**
-=======
+**按图索骥**：按照图像寻找好马。原比喻办事拘泥成法，不知灵活变通。现多比喻按线索寻找 类似于刻舟求剑
+
 **按图索骥**：按照图像寻找好马。原比喻办事拘泥成法，不知灵活变通。现多比喻按线索寻找
->>>>>>> 20bc17b056d141c6fe1b1f4bb52543b9a8d52dd8
 
 **因势利导**：顺应事物的发展趋势，向有利的方向引导
 
 **明察秋毫**：为人十分精明，任何细小的东西也能看得很清楚
 
-<<<<<<< HEAD
 **亦庄亦谐**：既严肃庄重又诙谐有趣。
 
 **河清海晏**：黄河水清，大海平静。比喻天下太平
 
+**惟妙惟肖**：形容描写、模仿十分逼真
 
+**别具匠心**：多指的是文学、艺术方面
 
-=======
->>>>>>> 20bc17b056d141c6fe1b1f4bb52543b9a8d52dd8
+**休戚与共**：共同承受幸福和灾祸，形容彼此关系密切
+
+**交相辉映**：各种光亮、色彩等互相映照
+
+**沽名钓誉**：用不正当的手段捞取名誉
+
+**惊鸿一瞥**：身形轻盈的女子摄人心魄的目光
+
 ### 三，文言文积累背诵
 
 #### 1，左传
